# contexa-sdk

./: .gitignore  CHANGELOG.md  CHANGE_TRACKING_LOG.md  CI_FIXES.md  CI_FIXES_COMPLETE.md  CI_ISSUE_RESOLUTION.md  CLEANUP_TASKS.md  CONTRIBUTING.md  CURRENT_SPRINT_STATUS.md  DATE_CORRECTION_LOG.md  DEVELOPER_GUIDELINES.md  DOCUMENTATION_CHECKLIST.md  FRAMEWORK_COMPATIBILITY.md  IMPLEMENTATION_PLAN.md  IMPROVEMENT_PLAN_STATUS.md  LICENSE  MCP_COMPLETION_PLAN.md  ONBOARDING.md  OPENAI_AGENTS_CORRECTION.md  PHASE_6_FINAL_COMPLETION_SUMMARY.md  PROJECT_COMPLETION.md  README.md  README_MCP.md  README_MCP_AGENTS.md  README_MULTI_FRAMEWORK.md  README_OBSERVABILITY.md  README_RUNTIME.md  SPRINT_2_COMPLETION_SUMMARY.md  SPRINT_3_COMPLETION_SUMMARY.md  SPRINT_3_KICKOFF.md  SPRINT_3_PLANNING.md  SUMMARY_OF_CHANGES.md  SUMMARY_OF_PROGRESS.md  TEST_IMPLEMENTATION_PLAN.md  pyproject.toml  pytest.ini  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
contexa_sdk/: __init__.py  version.py
docs/: DOCUMENTATION_STANDARDS.md  adapter_interfaces.md  core_concepts.md  google_adapter_migration.md  google_adapters.md  mcp_proxy_integration_guide.md  mcp_proxy_performance_guide.md  orchestration.md  testing_without_dependencies.md  versioning_strategy.md
examples/: agent_handoff.py  agent_visualization.py  cluster_runtime_example.py  content_creation_crew.py  crewai_handoff.py  crewai_orchestration.py  customer_support_agent.py  financial_analysis_agent.py  google_adapter_comparison.py  google_adapter_migration_example.py  google_adk_example.py  google_adk_handoff.py  google_adk_integration.py  (+12 more)
(+151 files in other folders)
