[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "contexa-sdk"
version = "0.1.0"
description = "Contexa SDK - Standardize AI agent tooling across frameworks"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2.0.0",
    "typer>=0.9.0",
    "jinja2>=3.0.0",
    "httpx>=0.24.0",
    "pyyaml>=6.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.22.0",
]

[project.optional-dependencies]
langchain = ["langchain>=0.1.0", "langchain-core>=0.1.0"]
crewai = ["crewai>=0.110.0"]
openai = ["openai>=1.0.0", "openai-agents>=0.4.0"]
google-adk = ["google-adk>=0.3.0"]
all = ["contexa-sdk[langchain]", "contexa-sdk[crewai]", "contexa-sdk[openai]", "contexa-sdk[google-adk]"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "tox>=4.0.0",
]

[project.scripts]
ctx = "contexa_sdk.cli.main:app"

[tool.setuptools]
packages = ["contexa_sdk"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true 